resources/testcases_static_checks/tests/positive/isShy/propagation.rls
../../../tests_common_data/rule-classification-examples/propagation.rls