resources/testcases_static_checks/tests/negative/isFrontierGuarded/transitivity.rls
../../../tests_common_data/rule-classification-examples/transitivity.rls